# zed

./: .dockerignore  .gitignore  .rules  ACP_INTEGRATION_SUMMARY.md  ACP_TESTS_FINAL_SUMMARY.md  ACP_TESTS_README.md  ACP_TEST_COVERAGE_SUMMARY.md  Cargo.toml  DEAD_CODE_CLEANUP_NEEDED.md  DEBUG_SUMMARY.md  FINAL_STATUS.md  FINAL_TEST_SUMMARY.txt  HONEST_STATUS.md  INTEGRATION_ISSUES_FOUND.md  README.md  TEST_COVERAGE_ANALYSIS.md  WEBSOCKET_IMPLEMENTATION_COMPLETE.md  WEBSOCKET_INTEGRATION_READY.md  WEBSOCKET_PROTOCOL_SPEC.md  WEBSOCKET_REMOTE_CONTROL_DESIGN.md  WHAT_HAPPENED_TIMELINE.md  ZED_CODEBASE_MAP.md  portingguide.md  run_acp_tests.sh
.github/workflows/: add_commented_closed_issue_to_project.yml  after_release.yml  catch_blank_issues.yml  community_update_all_top_ranking_issues.yml  community_update_weekly_top_ranking_issues.yml  compare_perf.yml  deploy_cloudflare.yml  deploy_collab.yml  pr_labeler.yml  publish_extension_cli.yml  release_nightly.yml  run_bundling.yml  run_cron_unit_evals.yml  run_unit_evals.yml  update_duplicate_magnets.yml
.helix/: startup.sh
assets/settings/: default.json
crates/acp_runtime/: CHANGELOG.md  Cargo.toml
crates/acp_runtime/src/: agent.rs  lib.rs  rpc.rs  rpc_tests.rs
crates/acp_thread/src/: acp_thread.rs  connection.rs  diff.rs
crates/agent/src/: agent.rs  db.rs  history_store.rs  thread.rs
crates/agent/src/tools/: context_server_registry.rs  grep_tool.rs
crates/agent2/src/: agent.rs  templates.rs
crates/agent_servers/: Cargo.toml
crates/agent_servers/src/: acp.rs  agent_servers.rs  claude.rs  connection_cache.rs
crates/agent_settings/src/: agent_settings.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_connection_store.rs  agent_panel.rs  agent_panel_tests.rs  agent_ui.rs  config_options.rs  conversation_view.rs  text_thread_editor.rs
crates/agent_ui/src/acp/: thread_history.rs  thread_view.rs
crates/agent_ui/src/acp/thread_view/: active_thread.rs
crates/agent_ui/src/agent_configuration/: configure_context_server_modal.rs
crates/agent_ui/src/conversation_view/: thread_view.rs
crates/anthropic/src/: anthropic.rs
crates/assets/src/: assets.rs
crates/assistant_tools/src/: templates.rs
crates/context_server/src/: client.rs  context_server.rs  transport.rs
crates/context_server/src/transport/: sse.rs
crates/docs_preprocessor/: Cargo.toml
crates/editor/src/: editor.rs
crates/eval/src/: instance.rs
crates/extension_host/src/wasm_host/wit/: since_v0_8_0.rs
crates/extensions_ui/src/: extensions_ui.rs
crates/external_websocket_sync/: Cargo.toml  PROTOCOL_SPEC.md  README.md  TESTING.md  mock-helix-server.js  test_api.sh  test_integration.md
crates/external_websocket_sync/e2e-test/: .gitignore  Dockerfile  Dockerfile.ci  Dockerfile.runtime  run_docker_e2e.sh  run_e2e.sh
crates/external_websocket_sync/e2e-test/helix-ws-test-server/: go.mod  go.sum  main.go
crates/external_websocket_sync/e2e-test/slow-mcp-server/: go.mod  main.go
crates/external_websocket_sync/src/: external_websocket_sync.rs  mcp.rs  mock_helix_server.rs  protocol_test.rs  real_websocket_tests.rs  server.rs  sync.rs  test_integration.rs  thread_service.rs  types.rs  websocket_sync.rs  websocket_sync.rs.backup
crates/external_websocket_sync/src/settings/: helix_settings.rs  mod.rs
crates/external_websocket_sync/src/sync_settings/: helix_settings.rs  mod.rs
crates/feature_flags/src/: flags.rs
crates/gpui/src/: svg_renderer.rs
crates/gpui/src/platform/blade/: blade_renderer.rs
crates/gpui_wgpu/src/: wgpu_context.rs  wgpu_renderer.rs
crates/http_client_tls/: Cargo.toml
crates/http_client_tls/src/: http_client_tls.rs
crates/language_model/src/: registry.rs
crates/language_models/src/provider/: anthropic.rs  open_ai.rs
crates/languages/src/: lib.rs
crates/migrator/src/: migrator.rs
crates/project/: Cargo.toml
crates/project/src/: agent_server_store.rs  context_server_store.rs  project_settings.rs  trusted_worktrees.rs
crates/recent_projects/src/: dev_container_suggest.rs  remote_connections.rs
crates/reqwest_client/src/: reqwest_client.rs
crates/settings/src/: settings.rs
crates/settings/src/settings_content/: agent.rs  project.rs
crates/settings_content/src/: agent.rs  settings_content.rs
crates/storybook/src/: assets.rs
crates/text/src/: locator.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: title_bar.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: persistence.rs  workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: migrate.rs
script/: test_sse_mcp_server.py
script/danger/: pnpm-lock.yaml
